# engineering-thesis

./: .gitignore  LICENSE  Makefile  README.md
src/gazebo/: CMakeLists.txt  commands.md  install_gazebo_models.bash  install_jetbot_model.sh  package.xml  setup.bash  setup.py
src/gazebo/models/amogus/: model.config  model.sdf
src/gazebo/models/dirt_path/: model.sdf
src/gazebo/models/ground_grass/: model.sdf
src/gazebo/models/ground_plane/: model.config  model.sdf
src/gazebo/models/jetbot/: model.sdf
src/gazebo/models/room/: model.sdf
src/gazebo/models/room_square/: model.config  model.sdf
src/gazebo/models/sun/: model.config  model.sdf
src/gazebo/plugins/actor_collisions/: CMakeLists.txt  actor_collisions.world
src/gazebo/worlds/: actor_room.world  actor_small_walk.world  actor_walk_circle.world  amogus.world  dirt_path.world  empty_world.world  maze.world  maze_obstacles.world  room_actor_circle.world  room_obstacles.world  simple_room.world  world.sdf
src/gazebo_util/: CMakeLists.txt  package.xml
src/gazebo_util/worlds/: actor_walk_square.world  simple_room.world  simple_room_obstacles.world
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: DetectionBox.msg
src/interfaces/srv/: Detector.srv  Inference.srv
src/jetbot/: CMakeLists.txt  package.xml
src/jetbot/config/: follow_person.xml  (+6 more)
src/jetbot_ros/: CMakeLists.txt  package.xml
src/nodes/: package.xml  setup.py
src/robot_desc/: package.xml  setup.py
src/robot_launch/: package.xml  setup.py
src/simulation/: CMakeLists.txt  package.xml
training/: test_yolo.py
(+32 files in other folders)
